# VNDATA2510_V1

./: CMakeLists.txt  README.md  partitions.csv
components/SHT30/: sht30.c
components/TM1638/: CMakeLists.txt  tm1638.c  tm1638_server_ui.c
components/TM1638/include/: tm1638.h
components/app_config/include/: app_config.h
components/app_events/include/: app_events.h
components/app_logic/: CMakeLists.txt  app_logic.c  config_sync.c  sms_command.c
components/app_logic/include/: app_logic.h  config_sync.h
components/board/: board.c
components/modem_service/: CMakeLists.txt  modem_service.c
components/modem_service/include/: modem_service.h
components/mqtt_service/: mqtt_service.c
components/net_manager/: CMakeLists.txt  net_manager.c
components/power_monitor/include/: power_monitor_config.h
components/power_monitor/src/: net_stub.c
components/provision_service/: provision_service.c
components/runtime_config/: runtime_config.c
components/runtime_config/include/: runtime_config.h
components/wifi_service/: wifi_service.c
main/: CMakeLists.txt  main.c
